--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Poppins', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,6 +15,7 @@ body {
 h1 {
     margin-bottom: 20px;
     text-align: center;
+    color: rgb(14, 231, 155);
 }
 
 label, select {
@@ -37,7 +38,7 @@ canvas {
     right: 10px;
     font-family: 'Poppins', sans-serif;
     font-size: 24px;
-    color: red;
+    color: rgb(14, 231, 155);
 }
 
 @media (max-width: 768px) {
